@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-simple-ca
 _name = globus_simple_ca
-version = 4.2
+version = 4.3
 
 INSTALLDIR = $(CURDIR)/debian/tmp
 
