@@ -1,3 +1,9 @@
+globus-common (15.12-1+gt6.@distro@) @distro@; urgency=low
+
+  * Don't depend on finding initializer/args parser
+
+ -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 15:34:37 -0500
+
 globus-common (15.11-1+gt6.@distro@) @distro@; urgency=low
 
   * Test Fixes
